--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.29.1",
+    "firebase": "^9.9.2",
     "react": "^18.2.0",
     "react-day-picker": "^8.0.7",
     "react-dom": "^18.2.0",
@@ -14,6 +15,7 @@
     "react-hook-form": "^7.34.0",
     "react-hot-toast": "^2.3.0",
     "react-icons": "^4.4.0",
+    "react-loader-spinner": "^5.1.7-beta.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "tw-elements": "^1.0.0-alpha12",
